[package]
name = "royal-bubbles-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "*"
tokio = {version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"]}
futures = "0.3.28"
serde_json = "1.0.86"
serde = {version = "1.0.151", features = ["derive"]}
winapi = {version = "0.3.9", features = ["winuser"]}